# PythonStAn

./: .coverage  .flake8  .gitignore  BUILTIN_REFACTOR_COMPLETE.md  CALL_EDGE_DISCOVERY_ANALYSIS.md  CALL_EDGE_ROOT_CAUSE.md  CALL_EDGE_ROOT_CAUSE_ANALYSIS.md  CALL_GRAPH_ISSUE_ANALYSIS.md  CLASS_METHOD_EXTRACTION_RESULTS.md  COMPREHENSIVE_CALL_INVESTIGATION_REPORT.md  COMPREHENSIVE_POINTER_ANALYSIS_REFINEMENT_PROMPT.md  CONTEXT_POLICY_BENCHMARK_RESULTS.md  CONTEXT_POLICY_DESIGN.md  CONTEXT_POLICY_IMPLEMENTATION_COMPLETE.md  CONTEXT_POLICY_QUICK_START.md  CONTEXT_SENSITIVITY_BUG_FIX_REPORT.md  DEBUGGING_QUICK_START.md  DEBUGGING_TOOLS_SUMMARY.md  DEEP_CODE_REVIEW_FINDINGS.md  DEEP_INVESTIGATION_FINAL_REPORT.md  DEEP_INVESTIGATION_QUICK_SUMMARY.md  DEEP_METRICS_INVESTIGATION_COMPLETE.md  DIAGNOSTIC_ANALYSIS_REPORT.md  FINAL_FIX_SUMMARY.md  FINAL_STATUS.txt  FIXES_IMPLEMENTED_SUMMARY.md  HANDOFF_COMPLETE.md  INTEGRATION_FIX_SUMMARY.md  INVESTIGATION_COMPLETE_SUMMARY.md  INVESTIGATION_SUMMARY.txt  KCFA_BUG_FIX_COMPLETE.md  KCFA_DEBUG_SESSION_REPORT.md  KCFA_PHASE4_COMPLETE.md  KCFA_PHASE4_PROGRESS.md  KCFA_PHASE4_SESSION_SUMMARY.md  LAZY_IR_OPTIMIZATION_RESULTS.md  LICENSE  MISSION_COMPLETE.md  MISSION_STATUS.md  MODULE_FINDER_INTEGRATION_COMPLETE.md  (+64 more)
benchmark/: README.md  analyze_call_edges.py  analyze_kcfa_policies.py  analyze_real_world.py  callgraph.py  closures.py  compare_context_policies.py  complex_expressions.py  control_flow.py  dataflow.py  generate_comparison_tables.py  generators.py  imports.py  metrics_collector.py  oop.py  type_annotations.py
(+576 files in other folders)
